--- a/frontend/src/components/newsletter/Newsletter.scss
+++ b/frontend/src/components/newsletter/Newsletter.scss
@@ -45,7 +45,7 @@
       }
     }
     
-    .btn {
+    .newsletter-submit {
       display: inline-block;
       font-weight: 400;
       text-align: center;
@@ -58,21 +58,17 @@
       line-height: 1.5;
       border-radius: 0.25rem;
       cursor: pointer;
+      background-color: #1976d2;
+      color: white;
+      width: 100%;
       
-      &.btn-primary {
-        color: #fff;
-        background-color: #0066cc;
-        border-color: #0066cc;
-        
-        &:hover {
-          background-color: #0056b3;
-          border-color: #004c99;
-        }
-        
-        &:disabled {
-          opacity: 0.65;
-          cursor: not-allowed;
-        }
+      &:hover {
+        background-color: #0056b3;
+      }
+      
+      &:disabled {
+        opacity: 0.65;
+        cursor: not-allowed;
       }
     }
     
